--- a/server/bin/index.html
+++ b/server/bin/index.html
@@ -3,8 +3,15 @@
 <head>
  <title></title>
  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+ <script src='index.js'></script>
+<style type='text/css'>
+body { font-family: monospace; }
+li { padding: 2px; }
+</style>
 </head>
 <body>
   <div>Wasm Sandbox</div>
+  <div>
+    <ul id='list'></ul>
 </body>
 </html>
